add arabic pages

--- a/app/home.html
+++ b/app/home.html
@@ -36,30 +36,30 @@
   		<nav class="cd-main-nav-wrapper">
   			<a href="#search" class="cd-search-trigger"></a>
   			<ul class="cd-main-nav">
-  				<li><a href="#" class="active">Companies</a></li>
-  				<li><a href="#" >Projects</a></li>
+  				<li><a href="#" class="active">الشركات</a></li>
+  				<li><a href="#">المشاريع</a></li>
           <li class="no-effect">
-            <a href=""><span class="flag-icon flag-icon-eg"></span> Cairo</a>
+            <a href=""><span class="flag-icon flag-icon-eg"></span> القاهرة</a>
           </li>
-  				<li class="btn-menu"><a href="#">Sign in</a></li>
-  			</ul> <!-- .cd-main-nav -->
-  		</nav> <!-- .cd-main-nav-wrapper -->
+  				<li class="btn-menu"><a href="#">تسجيل دخول</a></li>
+  			</ul>
+  		</nav>
   		<a href="#" class="cd-nav-trigger cd-text-replace">Menu<span></span></a>
   	</header>
 
   	<main class="cd-main-content">
-  		<!-- your content here -->
+
       <section class="hero">
         <div class="hero-bg">
           <div class="container-fluid">
         <div class="row">
           <div class="col-xl-6 col-md-12 offset-xl-3">
-            <h1 class="text-center">Matchmaking for Small Businesses</h1>
-            <p class="text-center">Find work and source suppliers in your local marketplace...</p>
+            <h1 class="text-center">التوفيق بين الشركات الصغيرة</h1>
+            <p class="text-center">البحث عن مورد العمل والمصدر في السوق المحلية ...</p>
             <div class="btn-hero text-center">
-              <a href="#" data-toggle="modal" data-target="#add-company"  class="btn btn-blue"><i class="fa fa-clone" aria-hidden="true"></i> Add your company</a>
-              <span class=""> or </span>
-              <a href="#" class="btn btn-blue "><i class="fa fa-folder-open-o" aria-hidden="true"></i> publish your project</a>
+              <a href="#" data-toggle="modal" data-target="#add-company" class="btn btn-blue"><i class="fa fa-clone" aria-hidden="true"></i> اضف شركتك</a>
+              <span> أو </span>
+              <a href="#" class="btn btn-blue"><i class="fa fa-folder-open-o" aria-hidden="true"></i> اضف مشروعك</a>
             </div>
           </div>
         </div>
@@ -70,13 +70,13 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
-              <ul class="d-flex justify-content-around ">
+              <ul class="d-flex justify-content-around">
                 <li class="align-self-center"><a href=""><img src="images/media/img-01.jpg" alt="title here"></a></li>
                 <li class="align-self-center"><a href=""><img src="images/media/img-02.jpg" alt="title here"></a></li>
                 <li class="align-self-center"><a href=""><img src="images/media/img-03.jpg" alt="title here"></a></li>
                 <li class="align-self-center"><a href=""><img src="images/media/img-04.jpg" alt="title here"></a></li>
                 <li class="align-self-center"><a href=""><img src="images/media/img-05.jpg" alt="title here"></a></li>
-                <li class="align-self-center" ><a href=""><img src="images/media/img-06.jpg" alt="title here"></a></li>
+                <li class="align-self-center"><a href=""><img src="images/media/img-06.jpg" alt="title here"></a></li>
               </ul>
             </div>
           </div>
@@ -88,15 +88,15 @@
           <div class="row px-4">
             <div class="col-md-4">
               <div class="sidebar sidebar-01">
-                <h2>Find Suppliers</h2>
-                <p class="mt-5 mb-5"> Browse thousands of reliable suppliers in different industries. Contact suppliers through SMBeez or directly. Check out the suppliers’ reviews by other clients like you and engage confidently in business relationships based on mutual trust.</p>
-                <a href="" class="btn btn-blue btn-yellow"><i class="fa fa-angle-right" aria-hidden="true"></i> Browse Companies</a>
+                <h2>اوجد موردين</h2>
+                <p class="mt-5 mb-5"> تصفح الآلاف من الموردين الموثوقين في مختلف الصناعات. اتصل بالموردين عبر SMBeez أو مباشرة. اطلع على مراجعات الموردين من قِبل عملاء آخرين مثلك وشاركوا بثقة في العلاقات التجارية القائمة على الثقة المتبادلة.</p>
+                <a href="" class="btn btn-blue btn-yellow"><i class="fa fa-angle-right" aria-hidden="true"></i> تصفح الشركات</a>
               </div>
             </div>
             <div class="col-md-8">
               <div class="row">
                 <div class="col-md-12">
-                  <h3 class="mb-5">Featured companies <a href="" class="btn btn-trans pull-right"><i class="fa fa-arrow-right" aria-hidden="true"></i> Discover more</a></h3>
+                  <h3 class="mb-5">شركات مميزة <a href="" class="btn btn-trans pull-right"><i class="fa fa-arrow-right" aria-hidden="true"></i> اكتشف المزيد</a></h3>
                 </div>
                 <div class="col-md-6">
                   <div class="company-box box-block mb-5">
@@ -129,7 +129,7 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="company-box box-block  mb-5">
+                  <div class="company-box box-block mb-5">
                     <img class="img-responsive" src="images/media/media-01.jpg" alt="tile here">
                     <div class="company-box-header media mt-4">
                       <a href="#" class="mr-3">
@@ -149,7 +149,7 @@
                               <option value="5">5</option>
                             </select>
                           </li>
-                          <li class="list-inline-item thumb-review"><a href="">(35 Reviews)</a></li>
+                          <li class="list-inline-item thumb-review"><a href="">(35 تقييم)</a></li>
                         </ul>
                       </div>
                     </div>
@@ -166,11 +166,11 @@
 
       <section class="featured-projects box-block">
         <div class="container-fluid">
-          <div class="row  px-4">
+          <div class="row px-4">
             <div class="col-md-8">
               <div class="row equal">
                 <div class="col-md-12">
-                  <h3 class="mb-5">Featured Projects <a href="" class="btn btn-trans pull-right"><i class="fa fa-arrow-right" aria-hidden="true"></i> Discover more</a></h3>
+                  <h3 class="mb-5">مشاريع مميزة <a href="" class="btn btn-trans pull-right"><i class="fa fa-arrow-right" aria-hidden="true"></i> اكتشف المزيد</a></h3>
                 </div>
                 <div class="col-md-6 mb-4">
                   <div class="project-box box-block">
@@ -206,10 +206,10 @@
 
               <div class="row equal">
                 <div class="col-md-12">
-                  <h3 class="mb-5">Featured Projects</h3>
+                  <h3 class="mb-5">مشاريع مميزة</h3>
                 </div>
                 <div class="col-md-12 mb-4">
-                  <div class="project-box project-box-side box-block ">
+                  <div class="project-box project-box-side box-block">
                     <p class="thumb-title mt-1 mb-1">Direct Mail Advertising</p>
                     <p>Over time, even the most sophisticated, memory packed computer can begin to run slow if we don’t do something to prevent it.</p>
                     <p class="tags">More in: <a href="">Finance and Insurance</a></p>
@@ -237,9 +237,9 @@
             <div class="col-md-6 col-xs-12 offset-md-3 text-center">
               <div class="text-center"></div>
               <h2>
-                <i class="fa fa-folder-o fa-3x mb-3" aria-hidden="true"></i> <br />Find Work</h2>
-              <p class="mt-5 mb-5"> Browse thousands of reliable suppliers in different industries. Contact suppliers through SMBeez or directly. Check out the suppliers’ reviews by other clients like you and engage confidently in business relationships based on mutual trust.</p>
-              <a href="" class="btn btn-blue btn-yellow"><i class="fa fa-angle-right" aria-hidden="true"></i>  Browse Projects</a>
+                <i class="fa fa-folder-o fa-3x mb-3" aria-hidden="true"></i> <br>ابحث عن عمل</h2>
+              <p class="mt-5 mb-5"> تصفح الآلاف من الموردين الموثوقين في مختلف الصناعات. اتصل بالموردين عبر SMBeez أو مباشرة. اطلع على مراجعات الموردين من قِبل عملاء آخرين مثلك وشاركوا بثقة في العلاقات التجارية القائمة على الثقة المتبادلة.</p>
+              <a href="" class="btn btn-blue btn-yellow"><i class="fa fa-angle-right" aria-hidden="true"></i>  تصفح المشاريع</a>
             </div>
           </div>
         </div>
@@ -250,9 +250,9 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-6 col-xs-12 offset-md-3 text-center">
-              <h2><i class="fa fa-files-o fa-2x mb-3" aria-hidden="true"></i> <br /> Be Found</h2>
-              <p class="mt-5 mb-5">Create your company profile and sar thousands of reliable suppliers in different industries. Contact suppliers through SMBeez or directly. Check out the suppliers’ reviews by other clients like you and engage confidently in business relationships based on mutual trust.</p>
-              <a href="" class="btn btn-blue btn-yellow-2 ">Browse Projects</a>
+              <h2><i class="fa fa-files-o fa-2x mb-3" aria-hidden="true"></i> <br> كن موجود</h2>
+              <p class="mt-5 mb-5">إنشاء ملف الشركة الخاص بك و الآلاف من الموردين الموثوق بهم في مختلف الصناعات. اتصل بالموردين عبر SMBeez أو مباشرة. اطلع على مراجعات الموردين من قِبل عملاء آخرين مثلك وشاركوا بثقة في العلاقات التجارية القائمة على الثقة المتبادلة.</p>
+              <a href="" class="btn btn-blue btn-yellow-2">تصفح المشاريع</a>
             </div>
           </div>
         </div>
@@ -272,7 +272,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-12">
-                  <h5 class="modal-title">Add your company</h5>
+                  <h5 class="modal-title">اضف شركتك</h5>
                 </div>
               </div>
             </div>
@@ -366,71 +366,72 @@
         </div>
       </div>
     </div>
-    <!-- /Add Company Model -->
+
+<!-- /Add Company Model -->
 
 
-    <footer class="footer">
-      <div class="container-fluid">
-        <div class="row px-4">
-          <div class="col-md-9">
-            <h6 class="mb-3">What is SMBeez</h6>
-            <p>SMBeez is your local online marketplace for small and medium companies keen to do business with you. Source project opportunities and find reliable suppliers easily from the comfort of your office. Confidently do business with trusted... <a href="">more</a></p>
-          </div>
-          <div class="col-md-3">
-            <h6 class="mb-3">Stay in touch</h6>
-            <form action="" class="newsletter">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="E-mail" aria-label="E-mail">
-                <span class="input-group-btn">
-                  <button class="btn btn-blue btn-yellow" type="button"><i class="fa fa-check" aria-hidden="true"></i></button>
-                </span>
-              </div>
-            </form>
-          </div>
-
-          <div class="col-md-3">
-            <h6>Links</h6>
-            <ul>
-              <li><a href="">About</a></li>
-              <li><a href="">Sign Up</a></li>
-              <li><a href="">Add your company</a></li>
-              <li><a href="">Publish your project</a></li>
-              <li><a href="">Terms & Conditions</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h6>Listing</h6>
-            <ul>
-              <li><a href="">Companies</a></li>
-              <li><a href="">Projects</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h6>Projects</h6>
-            <ul>
-              <li><a href="">Agriculture, Fishing,</a></li>
-              <li><a href="">and Food Services</a></li>
-              <li><a href="">Oil, Gas, and Mining</a></li>
-              <li><a href="">Utilities and Waste </a></li>
-              <li><a href="">Management</a></li>
-              <li><a href="">All Industries</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h6>Locations</h6>
-            <ul>
-              <li><a href="">Dubai</a></li>
-              <li><a href="">Abu Dhabi</a></li>
-              <li><a href="">Cairo</a></li>
-            </ul>
-          </div>
-
-          <div class="col-md-12">
-            <p>Made by Cloud Concept © 2017 - All Rights Reserved </p>
-          </div>
-        </div>
+<footer class="footer">
+  <div class="container-fluid">
+    <div class="row px-4">
+      <div class="col-md-9">
+        <h6 class="mb-3">What is SMBeez</h6>
+        <p>SMBeez is your local online marketplace for small and medium companies keen to do business with you. Source project opportunities and find reliable suppliers easily from the comfort of your office. Confidently do business with trusted... <a href="">more</a></p>
       </div>
-    </footer>
+      <div class="col-md-3">
+        <h6 class="mb-3">Stay in touch</h6>
+        <form action="" class="newsletter">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="E-mail" aria-label="E-mail">
+            <span class="input-group-btn">
+              <button class="btn btn-blue btn-yellow" type="button"><i class="fa fa-check" aria-hidden="true"></i></button>
+            </span>
+          </div>
+        </form>
+      </div>
+
+      <div class="col-md-3">
+        <h6>Links</h6>
+        <ul>
+          <li><a href="">About</a></li>
+          <li><a href="">Sign Up</a></li>
+          <li><a href="">Add your company</a></li>
+          <li><a href="">Publish your project</a></li>
+          <li><a href="">Terms & Conditions</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h6>Listing</h6>
+        <ul>
+          <li><a href="">Companies</a></li>
+          <li><a href="">Projects</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h6>Projects</h6>
+        <ul>
+          <li><a href="">Agriculture, Fishing,</a></li>
+          <li><a href="">and Food Services</a></li>
+          <li><a href="">Oil, Gas, and Mining</a></li>
+          <li><a href="">Utilities and Waste </a></li>
+          <li><a href="">Management</a></li>
+          <li><a href="">All Industries</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h6>Locations</h6>
+        <ul>
+          <li><a href="">Dubai</a></li>
+          <li><a href="">Abu Dhabi</a></li>
+          <li><a href="">Cairo</a></li>
+        </ul>
+      </div>
+
+      <div class="col-md-12">
+        <p>Made by Cloud Concept © 2017 - All Rights Reserved </p>
+      </div>
+    </div>
+  </div>
+</footer>
 
 
   	<div id="search" class="cd-main-search">
