update small things

--- a/app/company-listing.html
+++ b/app/company-listing.html
@@ -164,7 +164,8 @@
                       </div>
                     </div>
                     </div>
-                    <p>With easy access to Broadband and DSL the number of people using the Internet has skyrocket in recent years. Email, instant messaging and file </p>
+                    <p>With easy access to Broadband and DSL the number of people using the Internet has skyrocket in recent years. </p>
+                    <p class="address">Address here</p>
                     <p class="tags">More in: <a href="">Trade, Wholesale and Retail</a></p>
                   </div>
                 </div>
