--- a/app/about.html
+++ b/app/about.html
@@ -32,87 +32,64 @@
     <![endif]-->
 
     <header class="cd-main-header animate-search">
-  		<div class="cd-logo"><a href="#"><img src="images/common/logo-ar.svg" alt="Logo"></a></div>
-  		<nav class="cd-main-nav-wrapper">
-  			<a href="#search" class="cd-search-trigger"></a>
-  			<ul class="cd-main-nav">
-  				<li><a href="#">Companies</a></li>
-  				<li><a href="#" >Projects</a></li>
+      <div class="cd-logo"><a href="#"><img src="images/common/logo-ar.svg" alt="Logo"></a></div>
+      <nav class="cd-main-nav-wrapper">
+        <a href="#search" class="cd-search-trigger"></a>
+        <ul class="cd-main-nav">
+          <li><a href="#" class="active">الشركات</a></li>
+          <li><a href="#">فرص ومشاريع</a></li>
           <li class="no-effect">
-            <a href=""><span class="flag-icon flag-icon-eg"></span> Cairo</a>
+            <a href=""><span class="flag-icon flag-icon-eg"></span> القاهرة</a>
           </li>
+          <li class="btn-menu"><a href="#">تسجيل دخول</a></li>
+        </ul>
+      </nav>
+      <a href="#" class="cd-nav-trigger cd-text-replace">Menu<span></span></a>
 
-  				<li class="btn-menu"><a href="#">Sign in</a></li>
-  			</ul> <!-- .cd-main-nav -->
-  		</nav> <!-- .cd-main-nav-wrapper -->
-  		<a href="#" class="cd-nav-trigger cd-text-replace">Menu<span></span></a>
-  	</header>
+    </header>
 
   	<main class="cd-main-content">
   		<!-- your content here -->
-      <section class="hero about-hero">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-xl-6 col-md-12 offset-xl-3">
-            <h1 class="text-center">Matchmaking for Small Businesses</h1>
-            <p class="text-center">Find work and source suppliers in your local marketplace...</p>
-          </div>
-        </div>
-      </div>
-      </section>
-
-      <section class="about-intro">
-        <div class="container-fluid">
+      <section class="featured-block text-center pt-5  gray-bg">
+        <div class="container">
           <div class="row">
-            <div class="col-md-6 mrt-auto">
-              <h2 class="text-center pt-5 pb-4" >What is SMBeez?</h2>
-              <p>CD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology than we’ve ever had access to before. From your wrist watch to your laptop, a lot of the on the go electronics that we tote from place to place are only possible because of their thin, light LCD display screens. Liquid crystal display (LCD) technology still has some stumbling blocks in its path that can make it unreliable at times, but on the whole the invention of the LCD screen has allowed great leaps forward in global technological progress.</p>
-              <p class="pt-4">Although liquid crystals are not really liquid, their molecules behave more like a liquid than they do like a solid, which earns them their name. The crystals in an LCD exist in a kind of a unique middle ground between solid form and liquid form, which gives them the movement and flexibility of a liquid; but can also let them remain in place, like a solid. Heat can quickly melt a solid to liquid, allowing it to move, whereas cool will make the liquid solidify almost instantly.</p>
-              <div class="text-center py-4 mb-5">
-                <a href="" class="btn btn-blue btn-yellow ">Sign Up Today</a>
+            <div class="col-md-12">
+              <div class="row justify-content-md-center">
+                <div class="col-md-9  align-self-center mb-5">
+                  <h2>ماهو مشاريع.كوم</h2>
+                  <p class="pt-5">مشاريع هو بوابتك التي تساعدك أن توسع حجم أعمالك وتقدم على فرص المشاريع التي تناسب شركتك بكل سهولة. لو أنت تبحث عن فرص لمشاريع فالموقع يقدم لك مشاريع عديدة في مجالات مختلفة. ولو أنت عندك مشروع وتبحث عن موردين موثوق فيهم فالموقع يقدم لك أكثر من ٩٠٠٠ مورد يمكنك التحقق من مستوى خدماتهم والإتصال بهم بكل سهولة.</p>
+                </div>
               </div>
+            </div>
+            <div class="col-md-6 col-xs-12 mb-5 offset-md-3 text-center">
+              <a href="" class="btn btn-blue">تصفح المشاريع</a>
+              <a href="" class="btn btn-blue ">تصفح الشركات</a>
             </div>
           </div>
         </div>
       </section>
-
-
-      <section class="video-demo d-flex justify-content-center align-items-center">
-        <a href="#" class="btn btn-play">
-          <i class="fa fa-play-circle-o fa-2x" aria-hidden="true"></i>
-          <br />
-          Watch the Demo
-        </a>
-      </section>
-
-
-      <section class="find-be-block py-5">
-        <div class="container-fluid">
+      <section class="mt-5 mb-5 featured-block text-center mt-5 pt-5 ">
+        <div class="container">
           <div class="row">
-              <div class="col-md-6 text-center">
-                <h3>Find Work</h3>
-                <p class="w-75 mt-3 mrt-auto">Browse hundreds of projects and express interest in the projects that suit you. Apply through SMBeez or contact the clients directly. Check out the clients’ reviews by other suppliers like you and engage confidently in business relationships based on mutual trust.</p>
+            <div class="col-md-4 d-flex">
+              <div class="box-block-into box-gray mb-5 p-5">
+                <img src="images/media/block-01.svg" alt="" class="img-height img-responsive mb-3">
+                <h3>أضف مشاريعك</h3>
+                <p class="mt-3">تصفح آلاف الموردين الموثوق فيهم في مجالات مختلفة. تواصل مع الموردين عن طريق الموقع أو مباشرة معهم. تصفح آراء العملاء في الموردين وتعامل معهم بثقة.</p>
               </div>
-              <div class="col-md-6 text-center">
-                <h3>Be Found</h3>
-                <p class="w-75 mt-3 mrt-auto">Browse hundreds of projects and express interest in the projects that suit you. Apply through SMBeez or contact the clients directly. Check out the clients’ reviews by other suppliers like you and engage confidently in business relationships based on mutual trust.</p>
+            </div>
+            <div class="col-md-4 d-flex">
+              <div class="box-block-into box-gray mb-5 p-5">
+                <img src="images/media/block-02.svg" alt="" class="img-height img-responsive mb-3">
+                <h3>إبحث عن موردين</h3>
+                <p class="mt-3">إخلق بروفايل لشركتك وتواصل مع آلاف الموردين الموثوق بهم في مجالات عديدة. إتصل بالموردين عن طريق الموقع أو مباشرةً. تصفح رأي عملاء مثلك في الموردين وتعاقد مع أفضلهم بثقة وشفافية.</p>
               </div>
-
-              <div class="col-md-12 text-center py-5">
-                <a href="" class="btn btn-blue btn-yellow">Add your Company</a>
-              </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="terms-block bg-blue">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-6 py-5">
-              <div class="pl-5">
-              <h3>Terms & Conditions</h3>
-              <p class="mt-5 mb-5">There is a lot of exciting stuff going on in the stars above us that make astronomy so much fun. The truth is the universe is a constantly changing, moving, some would say “living” thing because you just never know what you are going to see on any given night of stargazing.</p>
-              <a href="" class="btn btn-blue btn-yellow-2">Read the document</a>
+            </div>
+            <div class="col-md-4 d-flex">
+              <div class="box-block-into box-gray mb-5 p-5">
+                <img src="images/media/block-03.svg" alt="" class="img-height img-responsive mb-3">
+                <h3>سجل شركتك</h3>
+                <p class="mt-3">ولو أنت عندك مشروع وتبحث عن موردين موثوق فيهم فالموقع يقدم لك أكثر من ٩٠٠٠ مورد يمكنك التحقق من مستوى خدماتهم والإتصال بهم بكل سهولة</p>
               </div>
             </div>
           </div>
@@ -233,61 +210,44 @@
     <footer class="footer">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-9">
-            <h6 class="mb-3">What is SMBeez</h6>
-            <p>SMBeez is your local online marketplace for small and medium companies keen to do business with you. Source project opportunities and find reliable suppliers easily from the comfort of your office. Confidently do business with trusted... <a href="">more</a></p>
+          <div class="col-md-3">
+            <h6 class="pb-3">تصفح  الموقع</h6>
+            <ul>
+              <li><a href="">ماهو مشاريع.كوم</a></li>
+              <li><a href="">قائمة الشركات</a></li>
+              <li><a href="">تسجيل الدخول</a></li>
+              <li><a href="">شروط الخصوصية</a></li>
+            </ul>
           </div>
           <div class="col-md-3">
-            <h6 class="mb-3">Stay in touch</h6>
+            <h6 class="pb-3">فرص ومشاريع</h6>
+            <ul>
+              <li><a href="">تكنولوجيا المعلومات</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <h6 class="pb-3">المدن</h6>
+            <ul>
+              <li><a href="">القاهرة</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <h6 class="pb-3">اشترك في القائمة البريدية</h6>
             <form action="" class="newsletter">
               <div class="input-group">
-                <input type="text" class="form-control" placeholder="E-mail" aria-label="E-mail">
+                <input type="text" class="form-control" placeholder="ادخل بريدك الالكتروني" aria-label="E-mail">
                 <span class="input-group-btn">
-                  <button class="btn btn-blue btn-yellow" type="button"><i class="fa fa-check" aria-hidden="true"></i></button>
+                  <button class="btn btn-blue btn-yellow" type="button"><i class="fa  fa-2x fa-check" aria-hidden="true"></i></button>
                 </span>
               </div>
             </form>
-          </div>
-
-          <div class="col-md-3">
-            <h6>Links</h6>
-            <ul>
-              <li><a href="">About</a></li>
-              <li><a href="">Sign Up</a></li>
-              <li><a href="">Add your company</a></li>
-              <li><a href="">Publish your project</a></li>
-              <li><a href="">Terms & Conditions</a></li>
+            <ul class="footer-social">
+              <li><a href=""><i class="fa fa-2x fa-linkedin-square" aria-hidden="true"></i></a></li>
+              <li><a href=""><i class="fa fa-2x fa-facebook-square" aria-hidden="true"></i></a></li>
             </ul>
           </div>
-          <div class="col-md-3">
-            <h6>Listing</h6>
-            <ul>
-              <li><a href="">Companies</a></li>
-              <li><a href="">Projects</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h6>Projects</h6>
-            <ul>
-              <li><a href="">Agriculture, Fishing,</a></li>
-              <li><a href="">and Food Services</a></li>
-              <li><a href="">Oil, Gas, and Mining</a></li>
-              <li><a href="">Utilities and Waste </a></li>
-              <li><a href="">Management</a></li>
-              <li><a href="">All Industries</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h6>Locations</h6>
-            <ul>
-              <li><a href="">Dubai</a></li>
-              <li><a href="">Abu Dhabi</a></li>
-              <li><a href="">Cairo</a></li>
-            </ul>
-          </div>
-
           <div class="col-md-12">
-            <p>Made by Cloud Concept © 2017 - All Rights Reserved </p>
+            <p  class="pt-3">Made by Masharee3 © 2018 - All Rights Reserved</p>
           </div>
         </div>
       </div>
