--- a/app/all-projects-industries.html
+++ b/app/all-projects-industries.html
@@ -67,39 +67,39 @@
           <div class="row">
             <div class="col-md-3">
               <div class="all-box">
-                <h2 class="d-flex justify-content-between align-items-center p-2">Agriculture, Fishing, and Food<i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <h2 class="d-flex justify-content-between align-items-center p-2">Agriculture, Fishing, and Food<i class="fa fa-2x fa-angle-left" aria-hidden="true"></i></h2>
                 <img src="images/media/all-01.jpg" alt="" class="img-fluid img-full">
               </div>
               <div class="all-box">
-                <h2 class="d-flex justify-content-between align-items-center p-2">Oil, Gas, and Mining <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <h2 class="d-flex justify-content-between align-items-center p-2">Oil, Gas, and Mining <i class="fa fa-2x fa-angle-left" aria-hidden="true"></i></h2>
                 <img src="images/media/all-02.jpg" alt="" class="img-fluid img-full">
               </div>
               <div class="all-box">
-                <h2 class="d-flex justify-content-between align-items-center p-2">Utilities and Waste Management <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <h2 class="d-flex justify-content-between align-items-center p-2">Utilities and Waste Management <i class="fa fa-2x fa-angle-left" aria-hidden="true"></i></h2>
                 <img src="images/media/all-03.jpg" alt="" class="img-fluid img-full">
               </div>
             </div>
             <div class="col-md-6">
               <div class="all-box">
-                <h2 class="d-flex justify-content-between align-items-center p-2">Construction and Real Estate <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <h2 class="d-flex justify-content-between align-items-center p-2">Construction and Real Estate <i class="fa fa-2x fa-angle-left" aria-hidden="true"></i></h2>
                 <img src="images/media/all-07.jpg" alt="" class="img-fluid img-full">
               </div>
               <div class="all-box">
-                <h2 class="d-flex justify-content-between align-items-center p-2">IT and Communication <i class="fa fa-2x fa-angle-right " aria-hidden="true"></i></h2>
+                <h2 class="d-flex justify-content-between align-items-center p-2">IT and Communication <i class="fa fa-2x fa-angle-left " aria-hidden="true"></i></h2>
                 <img src="images/media/all-08.jpg" alt="" class="img-fluid img-full">
               </div>
             </div>
             <div class="col-md-3">
               <div class="all-box">
-                <h2 class="d-flex justify-content-between align-items-center p-2">Trade, Wholesale and Retail <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <h2 class="d-flex justify-content-between align-items-center p-2">Trade, Wholesale and Retail <i class="fa fa-2x fa-angle-left" aria-hidden="true"></i></h2>
                 <img src="images/media/all-04.jpg" alt="" class="img-fluid img-full">
               </div>
               <div class="all-box">
-                <h2 class="d-flex justify-content-between align-items-center p-2">Manufacturing, Transportation, and Warehousing <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <h2 class="d-flex justify-content-between align-items-center p-2">Manufacturing, Transportation, and Warehousing <i class="fa fa-2x fa-angle-left" aria-hidden="true"></i></h2>
                 <img src="images/media/all-05.jpg" alt="" class="img-fluid">
               </div>
               <div class="all-box">
-                <h2 class="d-flex justify-content-between align-items-center p-2">Finance and Insurance<i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <h2 class="d-flex justify-content-between align-items-center p-2">Finance and Insurance<i class="fa fa-2x fa-angle-left" aria-hidden="true"></i></h2>
                 <img src="images/media/all-06.jpg" alt="" class="img-fluid img-full">
               </div>
             </div>
@@ -108,19 +108,19 @@
           <div class="row">
             <div class="col-md-4">
               <div class="all-box">
-                <h2 class="d-flex justify-content-between align-items-center p-2">General Services and Cleaning<i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <h2 class="d-flex justify-content-between align-items-center p-2">General Services and Cleaning<i class="fa fa-2x fa-angle-left" aria-hidden="true"></i></h2>
                 <img src="images/media/all-09.jpg" alt="" class="img-fluid img-full">
               </div>
             </div>
             <div class="col-md-4">
               <div class="all-box">
-                <h2 class="d-flex justify-content-between align-items-center p-2">HealthCare <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <h2 class="d-flex justify-content-between align-items-center p-2">HealthCare <i class="fa fa-2x fa-angle-left" aria-hidden="true"></i></h2>
                 <img src="images/media/all-10.jpg" alt="" class="img-fluid img-full">
               </div>
             </div>
             <div class="col-md-4">
               <div class="all-box">
-                <h2 class="d-flex justify-content-between align-items-center p-2">Education, Arts, Sports, and Entertainment <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <h2 class="d-flex justify-content-between align-items-center p-2">Education, Arts, Sports, and Entertainment <i class="fa fa-2x fa-angle-left" aria-hidden="true"></i></h2>
                 <img src="images/media/all-11.jpg" alt="" class="img-fluid img-full">
               </div>
             </div>
