--- a/app/company-details.html
+++ b/app/company-details.html
@@ -133,7 +133,7 @@
                 <li class="nav-item">
                   <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">Reviews from Customers</a>
                 </li>
-                <li class="nav-item mr-auto">
+                <li class="nav-item ml-auto">
                   <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Reviews from Suppliers</a>
                 </li>
                 <li>
