--- a/app/settings-redeem.html
+++ b/app/settings-redeem.html
@@ -130,12 +130,12 @@
                   <tr>
                     <td scope="row">Create NEw user more info here and details</td>
                     <td>240</td>
-                    <td align="right"><a href="" class="more-inf"><i class="fa fa-question-circle mr-2" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom"></i>Redeem</a></td>
+                    <td align="right"><a href="" class="more-inf">Redeem <i class="fa fa-question-circle mr-2" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom"></i></a></td>
                   </tr>
                   <tr>
                     <td scope="row">Create NEw user more info here and details</td>
                     <td>240</td>
-                    <td align="right"><a href="" class="more-inf"><i class="fa fa-question-circle mr-2" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom"></i>Redeem</a></td>
+                    <td align="right"><a href="" class="more-inf">Redeem <i class="fa fa-question-circle mr-2" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom"></i></a></td>
                   </tr>
                 </tbody>
               </table>
