update for layout

--- a/app/company-details.html
+++ b/app/company-details.html
@@ -104,7 +104,7 @@
           </div>
           <div class="col-lg-8">
 
-            <div class="hero-company-details">
+            <div class="hero-blank">
               <h1>Cloud Concept Group Cairo Cloud Concept Group Cairo</h1>
               <h2>Salesforce Platinum Partner</h2>
               <div class="star-rating">
@@ -121,7 +121,7 @@
                   <li class="list-inline-item thumb-review"><a href="">(35 Reviews)</a></li>
                 </ul>
               </div>
-              <div class="hero-shadow"></div>
+            
             </div>
 
 
