--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,11 @@
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
+  <style>
+  .cd-main-content {
+    background: #c7c7c7;
+  }
+  </style>
   <body class="home">
     <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
