update for Arabic UI

--- a/app/dashboard-compnay-edit.html
+++ b/app/dashboard-compnay-edit.html
@@ -84,7 +84,7 @@
               <div class="form-group">
                  <label class="custom-file">
                       <input type="file" id="logo_url" name="logo_url" class="custom-file-input" accept=".png, .jpg, .jpeg, .bmp">
-                      <span class="custom-file-control" data-label="Upload Logo"></span>
+                      <span class="custom-file-control" data-label="arabic text"></span>
                   </label>
               </div>
 
