--- a/app/home.html
+++ b/app/home.html
@@ -65,7 +65,7 @@
           </div>
         </div>
       </section>
-      <a href="" class="arrow-down"><i class="fa fa-angle-down fa-2x" aria-hidden="true"></i></a>
+      <a href="#down" class="arrow-down"><i class="fa fa-angle-down fa-2x" aria-hidden="true"></i></a>
 
     </div>
   	<main class="cd-main-content">
@@ -120,9 +120,9 @@
           </div>
           <div class="row">
             <div class="col-md-6 d-flex ">
-              <div class="box-block-into px-3 pb-3">
+              <div class="box-block-into px-3 pb-3 mb-5">
                 <h3>خدمة إدخال بيانات تسوقية</h3>
-                <select class="star-rating-fn">
+                <select class="star-rating-ro">
                   <option value="0">0</option>
                   <option value="1">1</option>
                   <option value="2">2</option>
@@ -135,9 +135,9 @@
               </div>
             </div>
             <div class="col-md-6 d-flex">
-              <div class="box-block-into px-3 pb-3">
+              <div class="box-block-into px-3 pb-3 mb-5">
                 <h3>مركز إتصال</h3>
-                <select class="star-rating-fn">
+                <select class="star-rating-ro">
                   <option value="0">0</option>
                   <option value="1">1</option>
                   <option value="2">2</option>
