--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@
               <li class="list-group-item"><a href="search-page.html">Search Page</a></li>
               <li class="list-group-item"><a href="about.html">About us</a></li>
               <li class="list-group-item"><a href="error-404.html">Error 404</a></li>
+              <li class="list-group-item"><a href="about-team.html">About Team</a></li>
 
 
             </ul>
